--- a/README.org
+++ b/README.org
@@ -2,3 +2,5 @@
 #+AUTHOR: Bilel Hamitouche
 
 This is a simple library website built with HTML, CSS and JavaScript as a part of the Odin Project.
+
+[[./screenshots/library.png]]
