--- a/README.org
+++ b/README.org
@@ -4,3 +4,5 @@
 This is a simple library website built with HTML, CSS and JavaScript as a part of the Odin Project.
 
 [[./screenshots/library.png]]
+
+[[https://billelmadrid.github.io/library][Live Demo]]
